# rob-agi

./: arc-2024-show-all-400-training-tasks.py  arc-render-imgs.ipynb  arc_util.py  arc_vec.py  colored_grid.py  computed_result.py  grid_problem.py  notes.md  pyproject.toml  solve-with-help.py  solve.py  solver_functions.py  strategies.py  task_loader.py  task_set.py  test.json  test_transforms.py  using-frontier-models-on-arc-agi-via-langchain.ipynb
apps/: testing_interface.html
apps/js/: testing_interface.js
basic/: main.py  task_loader.py
basic-prompt/: main.py
data/inputs/: arc-agi_training_challenges.json  arc-agi_training_solutions.json
rob_agi/: arc_util.py  arc_vec.py  colored_grid.py  computed_result.py  grid_problem.py  solve.py  solver_functions.py  task_set.py  test_transforms.py
